When pasting from clipboard, check data is non null before dereferencing

QClipboard::mimeData may return nullptr.

BUG: 463683